Limit web notification bubble height to fit in the user work area.

Change-Id: I1b8f6ab60fd5c871e0c119200a01f4ce091fdd7c
Bug: 833826
Test: Manually verified by turning on docked magnifier.
Reviewed-on: https://chromium-review.googlesource.com/1049466
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Commit-Queue: Tatsuhisa Yamaguchi <yamaguchi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#556714}
Former-commit-id: 004d768e0d37003e65cfc7e4ab8c7b9a2ad33666