ash/system/web_notification/web_notification_tray.cc
@@ -351,7 +351,8 @@ bool WebNotificationTray::ShowMessageCenterInternal(bool show_settings,
     // In the vertical case, it starts from the bottom of WebNotificationTray.
     const int max_height = (shelf()->IsHorizontalAlignment()
                                 ? shelf()->GetUserWorkAreaBounds().height()
-                                : GetBoundsInScreen().bottom());
+                                : GetBoundsInScreen().bottom() -
+                                      shelf()->GetUserWorkAreaBounds().y());
     // Sets the maximum height, considering the padding from the top edge of
     // screen. This padding should be applied in all types of shelf alignment.
     message_center_bubble->SetMaxHeight(max_height - kPaddingFromScreenTop);
